fixes to deal with a couple scenarios. Repair jobs will not get stuck due to a forkJoin with no emitting observables. Fixed an issue where an item is not cast to string for the copy to clipboard and some minor styling.

--- a/src/SfxWeb/src/app/views/cluster/infrastructure-view/infrastructure-view.component.scss
+++ b/src/SfxWeb/src/app/views/cluster/infrastructure-view/infrastructure-view.component.scss
@@ -1,6 +1,8 @@
 .chip {
   border-left: 5px solid var(--accent-darkblue);
-  // border-radius: 10px;
+  display: flex;
+  align-items: center;
+  line-height: 1;
   padding: 5px;
   font-size: var(--font-size-small);
 
